--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
@@ -33,129 +33,106 @@
 
 
 
-<div>
 
-</div>
-<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: normal;">
-	<b>
-		<span style="font-size: 14pt;">Краткая информация</span>
-	</b>
-</p>
-<div>
 
+<div id="myblank" style="text-indent: 45px;">
+	<br/>
+	<p>
+		<b>
+			<span style="font-size: 17pt;">Краткая информация</span>
+		</b>
+	</p>
 </div>
-<p class="MsoNormal" style="text-align: justify;">
-	<span style="font-size: 12pt; line-height: 115%;">&#160;</span>
-</p>
-<div>
 
-</div>
-<table class="MsoNormalTable" width="633" cellspacing="0" cellpadding="0" border="0" style="width: 474.9pt; margin-left: -8.8pt;">
-	<tbody>
-		<tr style="height: 27.75pt;">
-			<td width="204" style="width: 152.65pt; border: 1pt solid windowtext; padding: 0cm 5.4pt; height: 27.75pt;">
-				<p class="MsoNormal" align="left">
-					<b>Категория слушателей</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: windowtext windowtext windowtext currentcolor; border-style: solid solid solid none; border-width: 1pt 1pt 1pt medium; padding: 0cm 5.4pt; height: 27.75pt;">
-				<p class="MsoNormal" align="left">
-					<span style="font-size: 12pt; line-height: 115%;">лица, имеющие или получающие высшее образование</span>
-				</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<b>Срок обучения</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<span style="font-size: 12pt; line-height: 115%;">4-6 месяцев</span>
-				</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<b>Форма обучения</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
-					<span style="font-size: 12pt; line-height: 115%;">
-					</span>
-				</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<b>Режим занятий</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<span style="font-size: 12pt; line-height: 115%;">6-8 часов в день</span>
-				</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
+<div id="myblank">
+	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
+		<tbody style="font-size: 14pt;">
+				
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
-						<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
+						Категория слушателей
 					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
+						<li>
+						лица, имеющие или получающие высшее образование
+						</li>
+					</ul>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
+						Срок обучения
 					</b>
-				</p>
-				<b>
-				</b>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
-					<span style="font-size: 12pt; line-height: 115%;">экзамен</span>
-				</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					4-6 месяцев
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
-						<span style="font-size: 12pt; line-height: 115%;">Стоимость обучения</span>
+						Форма обучения
 					</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">27300 руб.</p>
-			</td>
-		</tr>
-		<tr style="height: 20.1pt;">
-			<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					очно-заочная
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
-						<span style="font-size: 12pt; line-height: 115%;">Документ по окончании​ обучения</span>
+						Режим занятий
 					</b>
-				</p>
-			</td>
-			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-				<p class="MsoNormal" align="left">диплом о профессиональной переподготовке установленного
-  образца </p>
-			</td>
-		</tr>
-	</tbody>
-</table>
-<div>
-
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					6 – 8 часов
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма аттестации
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					экзамен
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
+					<b>
+						Стоимость обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					27300 руб.
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
+					<b>
+						Документ по окончании обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					диплом о профессиональной переподготовке установленного образца 
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
-<p class="MsoNormal" style="text-align: justify;">
-	<span style="font-size: 12pt; line-height: 115%; font-family: arial, sans-serif;">​</span>
-</p>
 <div>
-
+	<br/>
 </div>
+
+
 
 
 
