--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -35,131 +35,108 @@
 
 
 
-
-	<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: normal;">
+<div id="myblank" style="text-indent: 45px;">
+	<br/>
+	<p>
 		<b>
-			<span style="font-size: 14pt;">Краткая информация</span>
+			<span style="font-size: 17pt;">Краткая информация</span>
 		</b>
 	</p>
+</div>
 
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="font-size: 12pt; line-height: 115%;">&#160;</span>
-	</p>
-
-	<table class="MsoNormalTable" width="633" cellspacing="0" cellpadding="0" border="0" style="width: 474.9pt; margin-left: -8.8pt;">
-		<tbody>
-			<tr style="height: 27.75pt;">
-				<td width="204" style="width: 152.65pt; border: 1pt solid windowtext; padding: 0cm 5.4pt; height: 27.75pt;">
-					<p class="MsoNormal" align="left">
-						<b>Категория
-  слушателей</b>
-					</p>
+<div id="myblank">
+	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
+		<tbody style="font-size: 14pt;">
+				
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Категория слушателей
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: windowtext windowtext windowtext currentcolor; border-style: solid solid solid none; border-width: 1pt 1pt 1pt medium; padding: 0cm 5.4pt; height: 27.75pt;">
-					<p class="MsoNormal" align="left">
-						<span style="font-size: 13pt; line-height: 115%;">Специалисты с высшим&#160; образованием, уровень владения языком А2 (</span>
-						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">Waystage</span>
-						<span style="font-size: 13pt; line-height: 115%;">)</span>
-					</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					Специалисты с высшим  образованием, уровень владения языком А2 ( Waystage )
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>Срок обучения</b>
-					</p>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Срок обучения
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">2,5 года</span>
-					</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					2,5 года
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>Форма обучения</b>
-					</p>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма обучения
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
-						<span style="font-size: 12pt; line-height: 115%;">
-					</span></p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					очно-заочная
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>Режим занятий</b>
-					</p>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Режим занятий
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<span style="font-size: 12pt; line-height: 115%;">6-8 часов в день</span>
-					</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					6 – 8 часов
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>
-							<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
-						</b>
-						<b>
-					</b></p>
-<b>
-				</b></td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<span style="font-size: 13pt; line-height: 115%;">квалификационный</span>
-						<span style="font-size: 12pt; line-height: 115%;">
-  экзамен</span>
-					</p>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма аттестации
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					квалификационный экзамен
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>
-							<span style="font-size: 12pt; line-height: 115%;">Стоимость обучения</span>
-						</b>
-					</p>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
+					<b>
+						Стоимость обучения
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">40 000,00 руб. в год</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					40 000,00 руб. в год
 				</td>
 			</tr>
-			<tr style="height: 20.1pt;">
-				<td width="204" style="width: 152.65pt; border-color: currentcolor black windowtext windowtext; border-style: none solid solid; border-width: medium 1pt 1pt; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">
-						<b>
-							<span style="font-size: 12pt; line-height: 115%;">Документ по окончании​ обучения</span>
-						</b>
-					</p>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
+					<b>
+						Документ по окончании обучения
+					</b>
 				</td>
-				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">диплом о профессиональной переподготовке установленного
-  образца (с присвоением новой квалификации)</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					диплом о профессиональной переподготовке установленного образца (с присвоением новой квалификации)
 				</td>
 			</tr>
 		</tbody>
 	</table>
-
-	
-	
-	
-	
-	
-	
+</div>
+<div>
+	<br/>
+</div>
 
 
-	
-	
-	
-	
-	
-	
+
+
+
+
+
+
+
+
 	<p class="MsoNormal" style="text-align: justify;">
 		<b>
 			<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
