--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -33,108 +33,113 @@
 
 
 
-	<h3 class="ms-rteElement-H3B">Краткая информация</h3>
-	<table class="ms-rteTable-1" width="100%" cellspacing="0">
-		<tbody>
+
+<div id="myblank" style="text-indent: 45px;">
+	<br/>
+	<p>
+		<b>
+			<span style="font-size: 17pt;">Краткая информация</span>
+		</b>
+	</p>
+</div>
+
+<div id="myblank">
+	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
+		<tbody style="font-size: 14pt;">
+				
 			<tr class="ms-rteTableEvenRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>Категория слушателей</strong>
-					</p>
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Категория слушателей
+					</b>
 				</td>
-				<td colspan="1" rowspan="1" class="ms-rteTableOddCol-1">
-					<ul>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
 						<li>
-							<div class="ms-rteElement-P">
-
-
-
-
-
-
-
-								<span>Лица, имеющие высшее образование (специалитет,
-бакалавриат, магистратура). </span>
-
-
-
-							</div>
+						Лица, имеющие высшее образование (специалитет, бакалавриат, магистратура).
 						</li>
 					</ul>
 				</td>
 			</tr>
-			<tr class="ms-rteTableOddRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>​Срок обучения</strong>
-					</p>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Срок обучения
+					</b>
 				</td>
-				<td class="ms-rteTableOddCol-1">
-					<p class="ms-rteElement-P">​2 - 4 месяцев</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					​2 - 4 месяцев
 				</td>
 			</tr>
+			
 			<tr class="ms-rteTableEvenRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>​Форма обучения</strong>
-					</p>
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма обучения
+					</b>
 				</td>
-				<td class="ms-rteTableOddCol-1">
-					<p class="ms-rteElement-P">очная или ​очно-заочная</p>
-				</td>
-			</tr>
-			<tr class="ms-rteTableOddRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>​Режим занятий</strong>
-					</p>
-				</td>
-				<td class="ms-rteTableOddCol-1">6-8 часов в день<br/>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					очная или ​очно-заочная
 				</td>
 			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Режим занятий
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					6-8 часов в день
+				</td>
+			</tr>
+			
 			<tr class="ms-rteTableEvenRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>​Форма аттестации</strong>
-					</p>
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма аттестации
+					</b>
 				</td>
-				<td rowspan="1" class="ms-rteTableOddCol-1">
-					<p class="ms-rteElement-P">экзамен</p>
-				</td>
-			</tr>
-			<tr class="ms-rteTableOddRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>​Стоимость обучения</strong>
-					</p>
-				</td>
-				<td class="ms-rteTableOddCol-1">
-					<p class="ms-rteElement-P">​25 000 руб.</p>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					экзамен
 				</td>
 			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
+					<b>
+						Стоимость обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					25 000 руб.
+				</td>
+			</tr>
+			
 			<tr class="ms-rteTableEvenRow-1">
-				<td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1">
-					<p class="ms-rteElement-P">
-						<strong>Документ&#160;по окончании​ обучения</strong>
-					</p>
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
+					<b>
+						Документ по окончании обучения
+					</b>
 				</td>
-				<td rowspan="1" class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p class="ms-rteElement-P">
-						<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
+						<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной переподготовке</a>&#160;установленного образца​
+					</p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+</div>
+<div>
+	<br/>
+</div>
 
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
+
+
+
+
+
+
 	<div>
 		
 		<h3 class="ms-rteElement-H3B">Перечень модулей</h3>
@@ -264,7 +269,8 @@
 				</ul>
 				<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
 			</ul>
-</div>		
+</div>
+		
 		
 		
 		
