--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -1,15 +1,10 @@
 
 
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -37,29 +32,141 @@ font-size: 14pt;
 
 
 
-<h3 class="ms-rteElement-H3B">Краткая информация</h3>
-<table class="ms-rteTable-1" width="100%" cellspacing="0"><tbody><tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>Категория слушателей</strong></p></td>
-<td colspan="1" rowspan="1" class="ms-rteTableOddCol-1"><ul><li><div class="ms-rteElement-P"><span>лица, имеющие среднее профессиональное или высшее образование;</span></div></li>
-<li><div class="ms-rteElement-P"><span>лица, получающие высшее образование</span></div></li></ul></td></tr>
-<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Срок обучения</strong></p></td>
-<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​8 месяцев</p></td></tr>
-<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Форма обучения</strong></p></td>
-<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​очно-заочная</p></td></tr>
-<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Режим занятий</strong></p></td>
-<td class="ms-rteTableOddCol-1"><ul><li><div class="ms-rteElement-P">​3&#160;будних дня в неделю&#160;с 18.30 до 21.40</div></li>
-<li><div class="ms-rteElement-P">в субботу с 10.00 до 13.00.</div></li></ul></td></tr>
-<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Форма аттестации</strong></p></td>
-<td rowspan="1" class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">защита <a target="_blank" href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf">выпускной​ аттестационной работы​</a></p></td></tr>
-<tr class="ms-rteTableOddRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>​Стоимость обучения</strong></p></td>
-<td class="ms-rteTableOddCol-1"><p class="ms-rteElement-P">​30 000 руб. (<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf">скачать реквизиты оплаты</a>)</p></td></tr>
-<tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>Документ&#160;по окончании​ обучения</strong></p></td>
-<td rowspan="1" class="ms-rteTableOddCol-1"><p class="ms-rteElement-P"><a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца</p></td></tr></tbody></table>
+
+
+
+
+<div id="myblank" style="text-indent: 45px;">
+	<br/>
+	<p>
+		<b>
+			<span style="font-size: 17pt;">Краткая информация</span>
+		</b>
+	</p>
+</div>
+
+<div id="myblank">
+	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
+		<tbody style="font-size: 14pt;">
+				
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Категория слушателей
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
+						<li>
+						лица, имеющие среднее профессиональное или высшее образование;
+						</li>
+						<li>
+						лица, получающие высшее образование
+						</li>
+					</ul>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Срок обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					​8 месяцев
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					очно-заочная
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Режим занятий
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
+						<li>
+						​3 будних дня в неделю с 18.30 до 21.40
+						</li>
+						<li>
+						в субботу с 10.00 до 13.00.
+						</li>
+					</ul>
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма аттестации
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<p class="ms-rteElement-P">
+						защита <a target="_blank" href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf">выпускной​ аттестационной работы​</a>
+					</p>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
+					<b>
+						Стоимость обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<p class="ms-rteElement-P">​30 000 руб. (<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf">скачать реквизиты оплаты</a>)</p>
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
+					<b>
+						Документ по окончании обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<p class="ms-rteElement-P"><a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной переподготовке</a>&#160;установленного образца</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+<div>
+	<br/>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="ms-rteElement-Callout4"><div><span>Необходимые&#160;документы для поступления:</span></div>
 <ul><li><span><a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</span></li>
-<li><span><span><font color="#03497e"><a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a></font></span>;</span></li>
-<li><span><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"></a>
+
+<li>
+<span><span><font color="#03497e"><a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a></font></span>;</span></li>
+
+<li>
+<span><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"></a>
 </span>
 договоры:
+
 <ul>
 <li>
 					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
