--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -33,122 +33,122 @@
 
 
 
-<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-
-​</a>
-<h3 class="ms-rteElement-H3B">Краткая информация</h3>
-<table class="ms-rteTable-1" width="100%" cellspacing="0">
-	<tbody>
-		<tr class="ms-rteTableEvenRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>Категория слушателей</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1" rowspan="1" colspan="1">
-				<ul>
-					<li>
-						<div class="ms-rteElement-P">лица, имеющие среднее профессиональное или высшее образование;</div>
-					</li>
-					<li>
-						<div class="ms-rteElement-P">лица, получающие высшее образование</div>
-					</li>
-				</ul>
-			</td>
-		</tr>
-		<tr class="ms-rteTableOddRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>​Срок обучения</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1">
-				<p class="ms-rteElement-P">7-8 месяцев</p>
-			</td>
-		</tr>
-		<tr class="ms-rteTableEvenRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>​Форма обучения</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1">
-				<p class="ms-rteElement-P">​очно-заочная</p>
-			</td>
-		</tr>
-		<tr class="ms-rteTableOddRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>​Режим занятий</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1">
 
 
+<div id="myblank" style="text-indent: 45px;">
+	<br/>
+	<p>
+		<b>
+			<span style="font-size: 17pt;">Краткая информация</span>
+		</b>
+	</p>
+</div>
 
-
-
-
-
-
-
-
-
-				<ul>
-					<li>
-						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">2-3 будних дня в неделю&#160;с 18.30 до 21.30</span>
-					</li>
-					<li>
-
-						<span style="font-size: 12pt; line-height: 107%; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">в субботу с 10.00 до 13.00.</span>
-
-
-
-					</li>
-				</ul>
-			</td>
-		</tr>
-		<tr class="ms-rteTableEvenRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>​Форма аттестации</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1" rowspan="1">
-				<p class="ms-rteElement-P">итоговый экзамен<br/>
-				</p>
-			</td>
-		</tr>
-		<tr class="ms-rteTableOddRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>​Стоимость обучения</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1">
-				<p class="ms-rteElement-P">​35 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)</p>
-			</td>
-		</tr>
-		<tr class="ms-rteTableEvenRow-1">
-			<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
-				<p class="ms-rteElement-P">
-					<strong>Документ&#160;по окончании​ обучения</strong>
-				</p>
-			</td>
-			<td class="ms-rteTableOddCol-1" rowspan="1">
-				<p class="ms-rteElement-P">
-					<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной&#160;переподготовке</a>&#160;установленного образца​</p>
-			</td>
-		</tr>
-	</tbody>
-</table>
-
-
-
+<div id="myblank">
+	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
+		<tbody style="font-size: 14pt;">
+				
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Категория слушателей
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
+						<li>
+						лица, имеющие среднее профессиональное или высшее образование;
+						</li>
+						<li>
+						лица, получающие высшее образование
+						</li>
+					</ul>
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Срок обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					7-8 месяцев
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					очно-заочная
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Режим занятий
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<ul style="padding-right: 10pt;">
+						<li>
+						2-3 будних дня в неделю с 18.30 до 21.30
+						</li>
+						<li>
+						в субботу с 10.00 до 13.00.
+						</li>
+					</ul>
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
+					<b>
+						Форма аттестации
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					итоговый экзамен
+				</td>
+			</tr>
+			<tr class="ms-rteTableOddCol-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="top" style="padding: 15pt;">
+					<b>
+						Стоимость обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<p class="ms-rteElement-P">​35 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)</p>
+				</td>
+			</tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
+					<b>
+						Документ по окончании обучения
+					</b>
+				</td>
+				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
+					<p class="ms-rteElement-P">
+						<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной переподготовке</a>&#160;установленного образца​
+					</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+<div>
+	<br/>
+</div>
 
 
 
-	
+
+
+
 	
 	
 	
